new img assets | set img getter

--- a/static/header.html
+++ b/static/header.html
@@ -14,9 +14,10 @@
         <picture loading="lazy">
             <source srcset="https://images.ctfassets.net/s5n2t79q9icq/3dB5uyWzUH95O1ZPBNNUX5/6cff7c65a809285755ea24b164b6ac65/magic-logo.png?fm=webp" type="image/webp">
             <img src="img/magic-logo-navbar.png" alt="Magic The Gathering Logo" width="115" height="38.47" ></picture></a>
-    <a href="#"><span>News</span></a>
-    <a href="#"><span>Contact</span></a>
-    <a href="#"><span>About</span></a>
+    <a href="#"><span>My Collection</span></a>
+    <a href="#"><span>Card Database</span></a>
+    <a href="#"><span>Search For Card</span></a>
+    <a href="#"><span>Upload CSV</span></a>
 </div>
 <!--End nav bar -->
 
