added selector layout

--- a/static/mycollection.html
+++ b/static/mycollection.html
@@ -25,6 +25,7 @@
     <link rel="apple-touch-icon-precomposed" href="https://magic.wizards.com/sites/all/themes/wiz_mtg/icons/touch-icon-180.png" sizes="180x180" />
 </head>
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!--Start nav bar -->
     <div class="topnav">
         <a href="landingpage.html">
@@ -55,29 +56,26 @@
     <div class="hr-sect--artefact">ARTEFACT</div>
 
     <div class="hr-sect--land">LAND</div>
-    <div class="divland" id="divland">Land</div>
 
     <div class="hr-sect--modal-double-sided-cards">MODAL DOUBLE-SIDED CARDS</div>
-    <div class="divmeld" id="divmeld">MODAL DOUBLE-SIDED CARDS</div>
-
     <!--End separator block -->
 
     <!--Start selector block -->
+    <p class="rtecenter" style="font-size: 1.5rem">Mit dem Klicken auf eines dieser Links, sollen alle Elemente die nicht so heißen, ausgeblendet werden.</p>
     <p class="rtecenter" style="font-size: 1.5rem">
-        <a href="#" onclick="javascript: hideAllButThis('divwhite'); return false;">WEISS</a> |
-        <a href="#" onclick="javascript: hideAllButThis('divblue'); return false;">BLAU</a> |
-        <a href="#" onclick="javascript: hideAllButThis('divblack'); return false;">SCHWARZ</a> |
-        <a href="#" onclick="javascript: hideAllButThis('divred'); return false;">ROT</a> |
-        <a href="#" onclick="javascript: hideAllButThis('divgreen'); return false;">GRÜN</a>
+        <a href="#" onclick="">WEISS</a> |
+        <a href="#" onclick="">BLAU</a> |
+        <a href="#" onclick="">SCHWARZ</a> |
+        <a href="#" onclick="">ROT</a> |
+        <a href="#" onclick="">GRÜN</a>
         <br>
-        <a href="#" onclick="javascript: hideAllButThis('divmulticolored'); return false;">MEHRFARBIG</a> |
-        <a href="#" onclick="javascript: hideAllButThis('divartifact'); return false;">ARTEFAKT</a> |
-        <a href="#" onclick="javascript: hideAllButThis('divland'); return false;">LAND</a> |
-        <a href="#" onclick="javascript: hideAllButThis('divmeld'); return false;">MODALE DOPPELSEITIGE KARTEN</a> |
-        <a href="#" onclick="javascript: showAllBlocks(); return false;">ALLE KARTEN</a>
+        <a href="#" onclick="">MEHRFARBIG</a> |
+        <a href="#" onclick="">ARTEFAKT</a> |
+        <a href="#" onclick="">LAND</a> |
+        <a href="#" onclick="">MODALE DOPPELSEITIGE KARTEN</a> |
+        <a href="#" onclick="">ALLE KARTEN</a>
     </p>
     <!--End selector block-->
-
 
 </body>
 </html>
