--- a/static/landingpage.html
+++ b/static/landingpage.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>MTG:Archive - landing page</title>
     <link href="stylesheets/navbar.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="stylesheets/footer.css" type="text/css">
     <!--favicon section-->
     <link rel="shortcut icon" href="https://magic.wizards.com/sites/all/themes/wiz_mtg/icons/favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="https://magic.wizards.com/sites/all/themes/wiz_mtg/icons/touch-icon-16.png" sizes="16x16" />
@@ -35,6 +36,12 @@
         <a href="fileupload.html"><span>Upload Img</span></a>
     </div>
     <!--End nav bar -->
+
+    <!--Start Footer -->
+    <div class="footer">
+        <p>Footer</p>
+    </div>
+    <!--End Footer -->
 
 </body>
 </html>
