--- a/static/fileupload.html
+++ b/static/fileupload.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>MTG:Archive - Img Upload</title>
     <link href="stylesheets/navbar.css" rel="stylesheet" type="text/css">
-    <!--favicon section-->
+    <link href="stylesheets/footer.css" rel="stylesheet" type="text/css">
+    <!-- Start favicon section-->
     <link rel="shortcut icon" href="https://magic.wizards.com/sites/all/themes/wiz_mtg/icons/favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="https://magic.wizards.com/sites/all/themes/wiz_mtg/icons/touch-icon-16.png" sizes="16x16" />
     <meta name="google-site-verification" content="WquIfqfWtlm2X62GTeJ-5vDtRrbOVOIT6mFc3vAP5BQ" />
@@ -20,6 +21,7 @@
     <link rel="apple-touch-icon-precomposed" href="https://magic.wizards.com/sites/all/themes/wiz_mtg/icons/touch-icon-144.png" sizes="144x144" />
     <link rel="apple-touch-icon-precomposed" href="https://magic.wizards.com/sites/all/themes/wiz_mtg/icons/touch-icon-152.png" sizes="152x152" />
     <link rel="apple-touch-icon-precomposed" href="https://magic.wizards.com/sites/all/themes/wiz_mtg/icons/touch-icon-180.png" sizes="180x180" />
+    <!-- End favicon section-->
 </head>
 <body>
 
@@ -37,10 +39,18 @@
     </div>
     <!--End nav bar -->
 
-
+    <!--Start Form -->
     <form enctype="multipart/form-data" action="http://localhost:8080/img/upload" method="post">
         <input type="file" name="myFile" />
         <input type="submit" value="upload" />
     </form>
+    <!--End Form -->
+
+    <!--Start Footer -->
+    <div class="footer">
+        <p>Footer</p>
+    </div>
+    <!--End Footer -->
+
 </body>
 </html>
