--- a/static/mycollection.html
+++ b/static/mycollection.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="stylesheets/navbar.css" type="text/css">
     <link rel="stylesheet" href="stylesheets/collection-separator.css" type="text/css">
     <link rel="stylesheet" href="stylesheets/collection-text.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/footer.css" type="text/css">
     <!--favicon section-->
     <link rel="shortcut icon" href="https://magic.wizards.com/sites/all/themes/wiz_mtg/icons/favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="https://magic.wizards.com/sites/all/themes/wiz_mtg/icons/touch-icon-16.png" sizes="16x16" />
@@ -76,6 +77,12 @@
         <a href="#" onclick="">ALLE KARTEN</a>
     </p>
     <!--End selector block-->
+
+    <!--Start Footer -->
+    <div class="footer">
+        <p>Footer</p>
+    </div>
+    <!--End Footer -->
 
 </body>
 </html>
