renamed mycollection.html -> card-database.html

--- a/static/fileupload.html
+++ b/static/fileupload.html
@@ -31,8 +31,8 @@
             <picture loading="lazy">
                 <source srcset="img/magic-logo-navbar.webp" type="image/webp">
                 <img src="img/magic-logo-navbar.png" alt="Magic The Gathering Logo" width="115" height="38.47" ></picture></a>
-        <a href="mycollection.html"><span>My Collection</span></a>
-        <a href="inprogress.html"><span>Card Database</span></a>
+        <a href="inprogress.html"><span>My Collection</span></a>
+        <a href="card-database.html"><span>Card Database</span></a>
         <a href="inprogress.html"><span>Search For Card</span></a>
         <a href="inprogress.html"><span>Upload CSV</span></a>
         <a href="fileupload.html"><span>Upload Img</span></a>
