--- a/static/inprogress.html
+++ b/static/inprogress.html
@@ -67,8 +67,8 @@
         <picture loading="lazy">
             <source srcset="img/magic-logo-navbar.webp" type="image/webp">
             <img src="img/magic-logo-navbar.png" alt="Magic The Gathering Logo" width="115" height="38.47" ></picture></a>
-    <a href="mycollection.html"><span>My Collection</span></a>
-    <a href="inprogress.html"><span>Card Database</span></a>
+    <a href="inprogress.html"><span>My Collection</span></a>
+    <a href="card-database.html"><span>Card Database</span></a>
     <a href="inprogress.html"><span>Search For Card</span></a>
     <a href="inprogress.html"><span>Upload CSV</span></a>
     <a href="fileupload.html"><span>Upload Img</span></a>
@@ -79,7 +79,6 @@
     <div class="middle">
         <h1>COMING SOON</h1>
         <hr>
-        <p>35 days left</p>
     </div>
 </div>
 
