renamed js files

--- a/static/card-database.html
+++ b/static/card-database.html
@@ -94,8 +94,8 @@
 
     <!--Start Script Section -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="js/selection.js"></script>
-    <script src="js/autocompletion.js"></script>
+    <script src="js/requestCards.js"></script>
+    <script src="js/searchSetWithAutocompletion.js"></script>
     <!--End Script Section -->
 
 </body>
